@@ -1,21 +1,30 @@
 package com.coursehub.service.impl;
 
+import com.coursehub.converter.DiscountConverter;
+import com.coursehub.components.OtpUtil;
 import com.coursehub.converter.UserConverter;
+import com.coursehub.dto.request.discount.DiscountSearchRequestDTO;
 import com.coursehub.dto.request.user.ChangePasswordRequestDTO;
 import com.coursehub.dto.request.user.ProfileRequestDTO;
+import com.coursehub.dto.response.discount.DiscountSearchResponseDTO;
 import com.coursehub.dto.response.user.UserManagementDTO;
 import com.coursehub.dto.response.user.UserResponseDTO;
+import com.coursehub.entity.DiscountEntity;
 import com.coursehub.entity.RoleEntity;
+import com.coursehub.entity.UserDiscountEntity;
 import com.coursehub.entity.UserEntity;
 import com.coursehub.exceptions.auth.DataNotFoundException;
 import com.coursehub.exceptions.user.*;
+import com.coursehub.repository.DiscountRepository;
 import com.coursehub.repository.RoleRepository;
+import com.coursehub.repository.UserDiscountRepository;
 import com.coursehub.repository.UserRepository;
 import com.coursehub.service.S3Service;
 import com.coursehub.service.UserService;
 import com.coursehub.utils.FileValidationUtil;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.security.core.context.SecurityContext;
 import org.springframework.security.core.context.SecurityContextHolder;
@@ -27,10 +36,12 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import java.io.IOException;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
+import java.time.LocalDateTime;
 import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 import java.util.UUID;
+import java.util.*;
 
 @Service
 @RequiredArgsConstructor
@@ -41,9 +52,12 @@ public class UserServiceImpl implements UserService {
     private final S3Service s3Service;
     private final RoleRepository roleRepository;
     private final PasswordEncoder passwordEncoder;
+    private final DiscountRepository discountRepository;
+    private final UserDiscountRepository userDiscountRepository;
+    private final DiscountConverter discountConverter;
+    private final OtpUtil otpUtil;
 
     private static final String USER_NOT_FOUND = "User not found";
-    private static final String ACTIVE = "active";
 
     @Override
     public UserResponseDTO getMyInfo() {
@@ -173,13 +187,13 @@ public class UserServiceImpl implements UserService {
 
         List<String> roles = Arrays.asList("LEARNER", "MANAGER");
         if (role != null && !role.isEmpty() && !role.equals("all")) {
-            roles = Arrays.asList(role.toUpperCase());
+            roles = List.of(role.toUpperCase());
         }
 
         Page<UserEntity> userPage;
         if (status != null && !status.isEmpty() && !status.equals("all")) {
             // Map status to isActive
-            Long isActive = status.equals(ACTIVE) ? 1L : 0L;
+            Long isActive = status.equals("active") ? 1L : 0L;
             userPage = userRepository.findByRoleEntity_CodeInAndIsActive(
                 roles,
                 isActive,
@@ -207,43 +221,20 @@ public class UserServiceImpl implements UserService {
     @Transactional
     public void updateUserStatus(Long userId, String status) {
         UserEntity user = userRepository.findById(userId)
-            .orElseThrow(() -> new DataNotFoundException(USER_NOT_FOUND));
-        
-        // Map status string to isActive
-        Long isActive = status.equals(ACTIVE) ? 1L : 0L;
-        user.setIsActive(isActive);
+                .orElseThrow(() -> new DataNotFoundException(USER_NOT_FOUND));
+        if ("ACTIVE".equalsIgnoreCase(status)) {
+            user.setIsActive(1L);
+        } else if ("BANNED".equalsIgnoreCase(status)) {
+            user.setIsActive(0L);
+        }
         userRepository.save(user);
     }
 
     @Override
     @Transactional
-    public void updateUserRole(Long userId, String role) {
+    public void deleteManager(Long userId) {
         UserEntity user = userRepository.findById(userId)
             .orElseThrow(() -> new UserNotFoundException(USER_NOT_FOUND));
-        
-        try {
-            RoleEntity roleEntity = roleRepository.findByCode(role.toUpperCase());
-            if (roleEntity == null) {
-                throw new DataNotFoundException("Role not found");
-            }
-
-            user.setRoleEntity(roleEntity);
-            userRepository.save(user);
-        } catch (Exception e) {
-            throw new IllegalArgumentException("Invalid role: " + e.getMessage());
-        }
-    }
-
-    @Override
-    @Transactional
-    public void deleteUser(Long userId) {
-        UserEntity user = userRepository.findById(userId)
-            .orElseThrow(() -> new UserNotFoundException(USER_NOT_FOUND));
-
-        // Kiểm tra xem user có đăng ký khóa học nào không
-        if (!user.getEnrollmentEntities().isEmpty()) {
-            throw new UserDeletionException("User has enrolled courses and cannot be deleted");
-        }
 
         if (user.getAvatar() != null) {
             try {
@@ -258,7 +249,7 @@ public class UserServiceImpl implements UserService {
 
     @Override
     @Transactional
-    public UserManagementDTO createUser(ProfileRequestDTO request) {
+    public UserManagementDTO createManager(ProfileRequestDTO request) {
         if (userRepository.existsByEmailAndIsActive(request.getEmail(), 1L)) {
             throw new IllegalArgumentException("Email already exists");
         }
@@ -267,30 +258,55 @@ public class UserServiceImpl implements UserService {
         if (learnerRole == null) {
             throw new DataNotFoundException("Default role not found");
         }
-
+        String tempPassword = generateTemporaryPassword(8);
         UserEntity user = new UserEntity();
         user.setName(request.getName());
         user.setEmail(request.getEmail());
         user.setIsActive(1L);
-
+        user.setPassword(passwordEncoder.encode(tempPassword));
         user.setRoleEntity(learnerRole);
 
         UserEntity savedUser = userRepository.save(user);
+        otpUtil.sendPasswordToManager(savedUser.getEmail(), tempPassword);
         return userConverter.convertToUserManagementDTO(savedUser);
+    }
+
+    private String generateTemporaryPassword(int length) {
+        String chars = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789@#$%";
+        StringBuilder sb = new StringBuilder();
+        Random random = new Random();
+        for (int i = 0; i < length; i++) {
+            sb.append(chars.charAt(random.nextInt(chars.length())));
+        }
+        return sb.toString();
+    }
+
+
+    @Override
+    @Transactional
+    public void addWarning(Long userId) {
+        UserEntity user = userRepository.findById(userId)
+            .orElseThrow(() -> new UserNotFoundException(USER_NOT_FOUND));
+
+        long currentWarnings = user.getWarningCount() != null ? user.getWarningCount() : 0L;
+        user.setWarningCount(currentWarnings + 1);
+
+        if (user.getWarningCount() >= 5) {
+            user.setIsActive(0L);
+        }
+
+        userRepository.save(user);
     }
 
     @Override
     @Transactional
     public void changePassword(ChangePasswordRequestDTO request) {
-        // Get current user
         UserEntity currentUser = getCurrentUser();
         
-        // Verify current password
         if (!passwordEncoder.matches(request.getCurrentPassword(), currentUser.getPassword())) {
             throw new IncorrectPasswordException();
         }
         
-        // Check if new password is different from current
         if (passwordEncoder.matches(request.getNewPassword(), currentUser.getPassword())) {
             throw new SamePasswordException();
         }
@@ -300,6 +316,37 @@ public class UserServiceImpl implements UserService {
     }
 
     @Override
+    public String getDiscount(Long discountId) {
+        DiscountEntity discountEntity = discountRepository.findById(discountId)
+                .orElseThrow(() -> new DataNotFoundException("Discount not found"));
+        if(userDiscountRepository.findByUserEntity_IdAndDiscountEntity_Id(getCurrentUser().getId(), discountEntity.getId()) != null) {
+            throw new UserAlreadyOwnsDiscountException("You have already claimed this discount");
+        }
+
+        UserDiscountEntity userDiscountEntity = new UserDiscountEntity();
+        userDiscountEntity.setDiscountEntity(discountEntity);
+        userDiscountEntity.setUserEntity(getCurrentUser());
+        userDiscountEntity.setIsActive(1L);
+        userDiscountRepository.save(userDiscountEntity);
+        return "Get discount successfully";
+    }
+
+    @Override
+    public Page<DiscountSearchResponseDTO> getAllDiscounts(DiscountSearchRequestDTO discountSearchRequestDTO) {
+        LocalDateTime now = LocalDateTime.now();
+        Pageable pageable = PageRequest.of(discountSearchRequestDTO.getPage(), discountSearchRequestDTO.getSize());
+        Page<DiscountEntity> discountEntities = discountRepository.searchDiscountsOwner(
+                discountSearchRequestDTO.getIsActive(),
+                discountSearchRequestDTO.getCategoryId(),
+                discountSearchRequestDTO.getCourseId(),
+                getCurrentUser().getId(),
+                discountSearchRequestDTO.getPercentage(),
+                now,
+                pageable
+        );
+        return discountConverter.toSearchResponseDTO(discountEntities);
+    }
+
     public UserEntity getUserBySecurityContext() {
         SecurityContext context = SecurityContextHolder.getContext();
         String email = context.getAuthentication().getName();
